# node_registry

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/: action.sh  how_to_build_and_test.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question-discussion.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
include/node_registry/: rosnode.hpp
node_registry/: __init__.py  decorators.py  xnode.py  xnode_builder.py
src/: rosnode.cpp
test/: test_rosnode.py
test/config/: rosnode.yaml
test/fixtures/: listener_node.py  talker_node.py
