<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>node_registry</name>
  <version>0.0.1</version>
  <description>ROS2 Node registry</description>
  <maintainer email="robotics@deepx.co.jp">Robotics section</maintainer>
  <license>BSD-3-Clause</license>

  <url>https://github.com/DeepX-inc/node_registry/wiki</url>
  <author>Krishneel Chaudhary</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
